fix bug [KMF002_F] Không lưu được giá trị setting
NUK-1118

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
@@ -232,7 +232,7 @@
 																		text: '#{i18n.getText('KMF002_17')}' 
 																	}"></div>
 					</div>
-					<div style="padding-left: 70px">
+					<div class="one_week_scrA">
 						<table>
 							<tr>
 								<th>
@@ -270,7 +270,7 @@
 							</tr>
 						</table>
 					</div>
-					<div style="padding-left: 70px;">
+					<div class="one_week_scrA">
 						<div>
 							<!-- A13_1 -->
 							<div tabindex="-1" data-bind="ntsFormLabel: {required: true, 
@@ -316,7 +316,7 @@
 																		text: '#{i18n.getText('KMF002_18')}' 
 																	}" name='#[KMF002_18]'></div>
 					</div>
-					<div id="one_week_scrA">
+					<div class="four_week_scrA">
 						<table>
 							<tr>
 								<th>
@@ -356,7 +356,7 @@
 							</tr>
 						</table>
 					</div>
-					<div id="four_week_scrA">
+					<div class="four_week_scrA">
 						<div>
 							<!-- A14_1 -->
 							<div tabindex="-1" data-bind="ntsFormLabel: {required: true,
