--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/013/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/013/a/index.xhtml
@@ -27,7 +27,7 @@
 					
 			</div>
 			<div id="contents-area">
-				<div class="container">
+				<div class="container cf">
 					<div class="valign-center control-group">
 						<div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('CAS013_7')}</div>
 						<div id="combo-box" tabindex="4"
