[CCG001] update UI

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/style.css
@@ -15,7 +15,6 @@
 }
 
 .contentkcp {
-	padding-top: 8px !important;
 	padding-left: 10px !important;
 }
 
@@ -74,14 +73,14 @@
 }
 
 .btn_apply {
-	width: 40px;
 	height: 100%;
 	background-color: #2ECC71;
 	color: white;
-	border-top-right-radius: 5px;
-	border-bottom-right-radius: 5px;
-	display: inline-block;
+	border-radius: 5px;
+	display: inline-table;
 	cursor: pointer;
+	margin-left: 10px;
+	margin-right: 5px;
 }
 
 .btn_apply:hover {
@@ -151,6 +150,18 @@
 	margin-left: 20px;
 }
 
+.ccg001-content {
+	background-color: #F2F2F2;
+	border-radius: 5px;
+	overflow: hidden;
+	height:100%;
+	padding-top: 20px;
+}
+
+.ccg001-control-group {
+	margin-left: 5px;
+}
+
 .ccg-tabpanel #tab-1 {
 	height: calc(100% - 80px);
 	background-color: white;
@@ -175,12 +186,10 @@
 }
 
 .icon-01-searchmode {
-	margin-left: 8px;
 	background: url(icon/01_ShowHideSearch.png);
 	width: 25px;
 	height: 25px;
 	background-size: 25px 25px;
-	margin-top: 110px;
 	cursor: pointer;
 }
 
@@ -189,19 +198,14 @@
 	width: 25px;
 	height: 25px;
 	background-size: 25px 25px;
-	margin-top: 50px;
-	margin-right: 10px;
 	cursor: pointer;
 }
 
 .labelShowHideButton {
 	cursor: pointer;
 	font-size: 16pt;
-	vertical-align: super;
-	line-height: 38px;
 	writing-mode: vertical-lr;
 	-ms-writing-mode: tb-lr;
-	text-orientation: upright;
 }
 
 .controlSettingShowHide.caret-right:after {
@@ -212,27 +216,22 @@
 }
 
 .btn_showhide {
-	width: 50px;
+	width: 40px;
 	background-color: #2ECC71;
 	padding-left: 8px;
 	color: white;
 	border-top-right-radius: 5px;
 	border-bottom-right-radius: 5px;
-	display: inline-block;
+	display: inline-table;
 	height: 370px;
 	cursor: pointer;
 }
 
 .lbl-apply {
-	height: 100%;
-	font-size: 16px;
-	margin-top: 20px;
+	font-size: 24px;
 	cursor: pointer;
-	vertical-align: super;
-	line-height: 38px;
 	writing-mode: vertical-lr;
 	-ms-writing-mode: tb-lr;
-	text-orientation: upright;
 }
 
 .ccg-tabpanel #nts-component-list {
@@ -240,7 +239,6 @@
 }
 
 #employeeinfo {
-	margin-top: 30px;
 }
 #tbl-ccg001-tab2 {
 	height: 100%;
