--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -4,11 +4,44 @@
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 	<div class="cf" id="ccg-component" style="display: none;overflow: hidden;">
-		<div class="pull-left" style="background-color: #F2F2F2; border-radius: 5px;overflow: hidden;height:100%;">
-			<div class="control-group" style="margin-left: 5px; margin-top: 20px;overflow: hidden;">
-				<div data-bind="ntsFormLabel: {}">#{i18n.getText('CCG001_1')}</div>
-				<div id="inp_baseDate" tabindex="1" data-bind="ntsDatePicker: {dateFormat: 'YYYY/MM/DD', value: baseDate, name: '#[CCG001_1]',required: true }"></div> 
-				<button tabindex="-1" id="btn_apply" data-bind="click: applyDataSearch">#{i18n.getText('CCG001_2')}</button>
+		<div class="pull-left ccg001-content">
+			<div class="control-group ccg001-control-group">
+				<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CCG001_27')}</div>
+				<div id="inp_baseDate" tabindex="1" data-bind="ntsDatePicker: {
+					name: '#[CCG001_27]',
+					dateFormat: 'YYYY/MM/DD',
+					value: baseDate,
+					required: true }"></div> 
+			</div>
+			<div class="control-group ccg001-control-group">
+				<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CCG001_28')}</div>
+				<div id="combo-box" style="display: inline-table" data-bind="ntsComboBox: {
+					name: '#[CCG001_28]',
+					options: closureList,
+					optionsValue: 'code',
+					visibleItemsCount: 5,
+					value: selectedClosure,
+					optionsText: 'name',
+					editable: false,
+					enable: true,
+					columns: [
+						{ prop: 'code', length: 2 },
+						{ prop: 'name', length: 5 },
+					]}"></div>
+			</div>
+			<div class="control-group ccg001-control-group">
+				<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CCG001_29')}</div>
+				<div id="inp_baseDate" tabindex="1" data-bind="ntsDatePicker: {
+					name: '#[CCG001_30]',
+					dateFormat: 'YYYY/MM/DD',
+					value: periodStart,
+					required: true }"></div> 
+					<div id="inp_baseDate" tabindex="2" data-bind="ntsDatePicker: {
+					name: '#[CCG001_31]',
+					dateFormat: 'YYYY/MM/DD',
+					value: periodEnd,
+					required: true }"></div> 
+				<button tabindex="5" id="zcxvzxcv" class="proceed" data-bind="click: applyDataSearch">#{i18n.getText('CCG001_2_12')}</button>
 			</div>
 		<div tabindex="2" id="tab-panel" class="cf ccg-tabpanel pull-left"
 			data-bind="if: isQuickSearchTab||isAdvancedSearchTab, ntsTabPanel: { dataSource: tabs, active: selectedTab}">
@@ -91,23 +124,24 @@
 								</div>
 							</div>
 							<div class="pull-left" style="height: 100%">
-								<div tabindex="14" class="flex valign-center btn_apply"
-								data-bind="click: applyEmployee">
-									<label class="lbl-apply" style="">#{i18n.getText('CCG001_25')}</label>
+								<div tabindex="15" class="btn_apply" data-bind="click: applyEmployee">
+									<div style="display:table-cell;vertical-align:middle;">
+										<div class="lbl-apply">#{i18n.getText('CCG001_25')}</div>
+									</div>
 								</div>
 							</div>
 							
 							<com:ko tag="ifnot" bind="isSelectAllEmployee">
 								<div class="pull-left" style="height: 100%">
-									<div tabindex="13" class="pull-left contentkcp"
+									<div tabindex="13" class="contentkcp"
 										id="employeeinfo"></div>
 								</div>
 								<div class="pull-left" style="height: 100%">
-									<div tabindex="12"
-										class="pull-left flex valign-center btn_apply"
-										data-bind="click: searchDataEmployee">
-										<i class="icon icon-01-searchmode"></i> <label
-											class="lbl-apply" style="">#{i18n.getText('CCG001_26')}</label>
+									<div tabindex="17" class="btn_apply" data-bind="click: searchDataEmployee">
+										<div style="display:table-cell;vertical-align:middle;">
+											<i class="icon icon-01-searchmode"></i>
+											<div class="lbl-apply">#{i18n.getText('CCG001_26')}</div>
+										</div>
 									</div>
 								</div>
 							</com:ko>
@@ -121,10 +155,11 @@
 	</div>
 	<div id="hor-scroll-button-hide"
 		data-bind="click: showHide">
-		<div class="flex valign-center btn_showhide">
+		<div class="btn_showhide">
+			<div style="display:table-cell;vertical-align:middle;">
 			<i class="icon icon-01-searchmode"></i> <label
 				class="labelShowHideButton">#{i18n.getText('CCG001_21')}</label>
+			</div>
 		</div>
-		<span class="controlSettingShowHide caret-right"></span>
 	</div>
 </ui:composition>
