fix bug [KMF002_F] UI error
NUK-1119

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/f/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/f/index.xhtml
@@ -39,7 +39,7 @@
 						<!-- F2_3 -->
 						<div>
 							<!-- F2_4, F2_5 -->
-							<div data-bind="ntsRadioBoxGroup: {
+							<div id="radioBoxTypeSelectScrF" data-bind="ntsRadioBoxGroup: {
 																options: typeSelectUnitRadioBox,
 																optionsValue: 'id',
 																optionsText: 'name',
