--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kbt/002/g/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kbt/002/g/index.xhtml
@@ -53,7 +53,7 @@
 					</table>
 				</div>
 				<div id="functions-area-bottom">
-					<button data-bind="click: closeDialog">#{i18n.getText('KBT002_134')}</button>
+					<button tabindex="-1" data-bind="click: closeDialog">#{i18n.getText('KBT002_134')}</button>
 				</div>
 			</ui:define>
 		</ui:composition>
