--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/a_index.xhtml
@@ -55,7 +55,7 @@
 																name: '#[KMF002_4]'}"></div>
 				</div>
 				<!-- A3_9 -->
-				<div tabindex="5" data-bind="ntsCheckBox: { checked: forwardSetOfPubHD().isTransferWhenPublicHdIsMinus, 
+				<div tabindex="5" id="ckbTransferWhenPublicHdIsMinus" data-bind="ntsCheckBox: { checked: forwardSetOfPubHD().isTransferWhenPublicHdIsMinus, 
 															enable: enableTransferWhenPublicHdIsMinus 
 															}" name='#[KMF002_7]'>#{i18n.getText('KMF002_7')}</div>
 			</div>
@@ -69,7 +69,7 @@
 				<!-- A4_2 -->
 				<div tabindex="6" name='#[KMF002_7]'>
 					<!-- A4_3, A4_4 -->
-					<div tabindex="-1" data-bind="ntsRadioBoxGroup: { options: publicHDPeriod,
+					<div id="publicHdManagementClassification" tabindex="-1" data-bind="ntsRadioBoxGroup: { options: publicHDPeriod,
 														optionsText: 'name',
 														optionsValue: 'id',
 														value: publicHolidaySetting().publicHdManagementClassification,
@@ -105,7 +105,7 @@
 					<!-- A9_2 -->
 					<div tabindex="8">
 						<!-- A9_3, A9_4 -->
-						<div tabindex="-1" data-bind="ntsRadioBoxGroup: { options: dayOfPublicHoliday,
+						<div id="determineStartDate" tabindex="-1" data-bind="ntsRadioBoxGroup: { options: dayOfPublicHoliday,
 															optionsText: 'name',
 															optionsValue: 'id',
 															value: publicHolidaySetting().pubHD().determineStartDate,
@@ -171,7 +171,7 @@
 																									editable: false,
 																									enable: enableStartDay,
 																									columns: [
-																										{ prop: 'name', length: 10 },
+																										{ prop: 'name', length: 4 },
 																									],
 																									name: '#[KMF002_47]'
 																								}"></div>
