--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -3,7 +3,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
-	<div class="cf" id="ccg-component" style="display: none;overflow: hidden;">
+	<div class="cf" id="component-ccg001">
 		<div class="pull-left ccg001-content">
 			<div class="control-group ccg001-control-group">
 				<div data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CCG001_27')}</div>
